tests/baselines/reference/thisInModule.errors.txt
==== tests/cases/compiler/thisInModule.ts (1 errors) ====
    module myMod {
        var x;
        this.x = 5;
        ~~~~
!!! thisInModule.ts(3,5): error TS2108: 'this' cannot be referenced within module bodies.
    }